objects/AME_project_cloud_Project_Charter__c.object
<CustomObject>
    <fields>
        <fullName>AME_project_cloud_24hr_Disaster_Recovery__c</fullName>
        <label>...24hr Disaster Recovery?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AME_project_cloud_Req_Infra_Involvement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Add_Active_Dir_Groups__c</fullName>
        <label>...additional Active Directory groups?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AME_project_cloud_Req_Infra_Involvement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Alt_Considered__c</fullName>
        <label>Alternatives Considered</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Database_Type__c</fullName>
        <label>Database Type</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Est_Infrastructure_Ava__c</fullName>
        <label>Estimated Infrastructure Availability</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_High_Level_Pjct_Desc__c</fullName>
        <label>High Level Project Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_IT_Approval_Date__c</fullName>
        <label>IT Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_IT_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>IT Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Charters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Identified_during_BTS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Identified during BTS?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_In_Scope__c</fullName>
        <label>In Scope</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Out_of_Scope__c</fullName>
        <label>Out of Scope</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Project_Code__c</fullName>
        <formula>AME_project_cloud_Project__r.AME_project_cloud_Project_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Project_Goals_Obj__c</fullName>
        <label>Project Goals &amp; Objectives</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>project_cloud__Project__c</referenceTo>
        <relationshipLabel>Project Charters</relationshipLabel>
        <relationshipName>Project_Charters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Qualitative__c</fullName>
        <label>Qualitative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Quantitative__c</fullName>
        <label>Quantitative</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Reason_24hr_Dis_Rec__c</fullName>
        <label>Reason for 24hr Disaster Recovery</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Req_ITSS_Involvement__c</fullName>
        <label>Requires ITSS Involvement?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Req_Infra_Involvement__c</fullName>
        <label>Requires Infrastructure Involvement?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Req_Tech_Involvement__c</fullName>
        <label>Requires Technology Involvement?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Require_a_server__c</fullName>
        <label>...a server?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AME_project_cloud_Req_Infra_Involvement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Require_expansion__c</fullName>
        <label>...expansion?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AME_project_cloud_Req_Infra_Involvement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_SSO__c</fullName>
        <label>SSO?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Strat_Classification__c</fullName>
        <label>Strategic Classification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grow the business</fullName>
                </value>
                <value>
                    <fullName>Execute the business</fullName>
                </value>
                <value>
                    <fullName>Service Business Users</fullName>
                </value>
                <value>
                    <fullName>Efficiency &amp; Maturity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_Support_Strategy__c</fullName>
        <label>Support Strategy</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AME_project_cloud_a_database__c</fullName>
        <label>...a database?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AME_project_cloud_Req_Infra_Involvement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_additional_disks__c</fullName>
        <label>...additional disks?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AME_project_cloud_Req_Infra_Involvement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_authentication__c</fullName>
        <label>...authentication?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AME_project_cloud_Req_Infra_Involvement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_new_configuration__c</fullName>
        <label>...new configuration?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AME_project_cloud_Req_Infra_Involvement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_review_of_ntwk_config__c</fullName>
        <label>...review of the network configuration?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AME_project_cloud_Req_Infra_Involvement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_software_installed__c</fullName>
        <label>...software to be installed?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AME_project_cloud_Req_Infra_Involvement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AME_project_cloud_vendor_acc_to_server__c</fullName>
        <label>...vendor access to the server?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>AME_project_cloud_Req_Infra_Involvement__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Submitted</fullName>
                    <default>true</default>
                    <label>Not Submitted</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCPE_Budget_Approval_Date__c</fullName>
        <label>Budget Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Budget_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Budget Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Charters2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Data_Steward_III_Approval_Date__c</fullName>
        <label>Data Steward III Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Data_Steward_III__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Steward III</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Charters9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Data_Steward_II_Approval_Date__c</fullName>
        <label>Data Steward II Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Data_Steward_II__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Steward II</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Charters8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Data_Steward_I_Approval_Date__c</fullName>
        <label>Data Steward I Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Data_Steward_I__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Data Steward I</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Charters7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_ITSS_Approval_II_Date__c</fullName>
        <label>ITSS Approval II Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_ITSS_Approval_II__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ITSS Approval II</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Charters4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_ITSS_Approval_I_Date__c</fullName>
        <label>ITSS Approval I Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_ITSS_Approval_I__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ITSS Approval I</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Charters3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Infrastructure_Approval_Date__c</fullName>
        <label>Infrastructure Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Infrastructure_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Infrastructure Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Charters6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Locked__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CCPE_Project_Charter_PDF__c</fullName>
        <formula>HYPERLINK(&quot;https://pernod-ricard--c.eu1.visual.force.com/apex/AME_project_cloud_Project_Charter_PDF?scontrolCaching=1&amp;id=&quot; &amp;Id, &quot;Project Charter PDF&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Charter PDF</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCPE_Request_for_Project_Change__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request for Project Change</label>
        <referenceTo>AME_project_cloud_Req_for_Project_Change__c</referenceTo>
        <relationshipLabel>Project Charters</relationshipLabel>
        <relationshipName>Project_Charters</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Solutions_Approval_Date__c</fullName>
        <label>Solutions Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Solutions_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Solutions Approval</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Charters5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Sponsor_Approval_II_Date__c</fullName>
        <label>Sponsor Approval II Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Sponsor_Approval_II__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor Approval II</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_ChartersJ3NA</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Sponsor_Approval_I_Date__c</fullName>
        <label>Sponsor Approval I Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCPE_Sponsor_Approval_I__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sponsor Approval I</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Project_Charters1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CCPE_Total_Actual_Amount__c</fullName>
        <label>Total Actual Amount</label>
        <summarizedField>AME_project_cloud_Project_Budget__c.AME_project_cloud_Actual__c</summarizedField>
        <summaryForeignKey>AME_project_cloud_Project_Budget__c.AME_project_cloud_Project_Charter__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CCPE_Total_Budgeted_Amount__c</fullName>
        <label>Total Budgeted Amount</label>
        <summarizedField>AME_project_cloud_Project_Budget__c.AME_project_cloud_Budget__c</summarizedField>
        <summaryForeignKey>AME_project_cloud_Project_Budget__c.AME_project_cloud_Project_Charter__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Project Charter</label>
    <nameField>
        <label>Project Charter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Charters</pluralLabel>
    <recordTypes>
        <fullName>AME_project_cloud_Project_Charter_no_infrastructure</fullName>
        <active>true</active>
        <label>Project Charter (no infrastructure)</label>
    </recordTypes>
    <recordTypes>
        <fullName>AME_project_cloud_Project_Charter_w_Infrastructure</fullName>
        <active>true</active>
        <label>Project Charter (w/ Infrastructure)</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CCPE_ProjectCharterApproverNotCurrentUse</fullName>
        <active>true</active>
        <errorConditionFormula>CCPE_Sponsor_Approval_I__c =  $User.Id 
|| AME_project_cloud_IT_Approval__c  =  $User.Id</errorConditionFormula>
        <errorMessage>The current user cannot be selected as either the Sponsor Approver or IT Approver.  Please provide new approvers to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CCPE_ProjectCharterLocked</fullName>
        <active>true</active>
        <errorConditionFormula>CCPE_Locked__c = TRUE 
&amp;&amp; NOT(ISCHANGED(CCPE_Locked__c))
&amp;&amp; NOT(ISCHANGED(CCPE_Request_for_Project_Change__c))
&amp;&amp; NOT(ISCHANGED(Approval_Status__c))
&amp;&amp; NOT(ISCHANGED(CCPE_Total_Actual_Amount__c))
&amp;&amp; NOT(ISCHANGED(CCPE_Total_Budgeted_Amount__c))
&amp;&amp; NOT(LastModifiedDate &lt;&gt; LastModifiedDate)</errorConditionFormula>
        <errorMessage>This Project Charter is either pending approval or has already been approved; therefore, it cannot be edited.  To make updates to this Project Charter, either submit a Request for Project Change or unlock the record.</errorMessage>
    </validationRules>
</CustomObject>